Bug 65536 - UI: Modify Style will lead in Crash
Summary: UI: Modify Style will lead in Crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-06-08 08:44 UTC by Bugcruncher
Modified: 2013-06-08 14:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (49.06 KB, text/plain)
2013-06-08 11:01 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bugcruncher 2013-06-08 08:44:58 UTC
Problem description: 

Steps to reproduce:
1. Open a new Draw document
2. Draw a short line 
3. Click Line
4. f11 for Styles
5. Right click "Default" and then "Modify"

Current behavior: Crash


              
Operating System: Windows 7
Version: 4.2.0.0.alpha0+ Master
Last worked in: 4.0.3.3 release
Comment 1 Jorendc 2013-06-08 09:26:46 UTC
Thanks for reporting!

I can reproduce this using Mac OSX 10.8.3 LibreOffice Version: 4.2.0.0.alpha0+
Build ID: de72699615bd2d12257d1a295e541ed5117fe28

Even easier steps:
* Open draw
* Format > Styles and Format
* Right click on any style (say 'default')

I'll try to provide a backtrace when I'm back on my Linux desktop, probably also reproducible on Linux.

Kind regards,
Joren
Comment 2 Jorendc 2013-06-08 11:01:00 UTC
Created attachment 80520 [details]
backtrace
Comment 3 Jorendc 2013-06-08 11:05:41 UTC
@Caolan: sorry to bug you again :-), but as far I can see this is vcl related? Or am I (again) wrong :)?

#4  0x00007fffbc9c7101 in VclBuilder::get<MultiLineEdit> (this=0x47b8360, ret=@0x2440830: 0x6666666666666666, sID=...) at /home/joren/core/include/vcl/builder.hxx:249
#5  0x00007fffbc9c6bd5 in VclBuilderContainer::get<MultiLineEdit> (this=0x2440790, ret=@0x2440830: 0x6666666666666666, sID=...) at /home/joren/core/include/vcl/builder.hxx:379

Thanks for your time in advance,
Joren
Comment 4 Caolán McNamara 2013-06-08 13:46:16 UTC
my bug, from some exciting code I put in to try and make previews on two different tab pages share the same size to make switching tabs look nice without "jumping around".

it would help I guess if I checked correctly in my test if the other tab was a layout tab, sigh.

this should affect master only and not 4-1
Comment 5 Caolán McNamara 2013-06-08 13:48:33 UTC
FWIW I think the backtrace attached is from a different bug i.e. bug 65215 with the comment dialog from change-tracking and not this problem. There's no need though to upload a new bt I got it here locally now.
Comment 6 Commit Notification 2013-06-08 14:24:51 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ea2cc95f5996213c370dff61a36fb667dd6771e

Resolves: fdo#65536 check if builder is NULL



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.