Resolves: fdo#65536 check if builder is NULL

Change-Id: Ieabd56d6da06b480ade662a55aebd35d0769f2ea